Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23429

Auth failure with mem client for LDAP user

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 5.0.0
    • 5.0.0
    • memcached
    • Enterprise Edition 5.0.0-2356 build 2356
    • Untriaged
    • Centos 64-bit
    • No

    Description

      1. Install CB and configure it to use saslauthd. Create a user in ldap
      2. Add user to CB - External user
      3. Login to CB Server to make sure that user is authentication correctly with CB. Create a bucket default
      4. Using the memcached client, try and do sasl_auth_plain for connection. 

      Memcached client returns an auth error. Same works with builtin user.

      Code:

      from mc_bin_client import MemcachedClient
      import uuid

      prefix = str(uuid.uuid4())
      number_of_items = 10

      mc = MemcachedClient(host='10.142.150.101', port=11210)
      mc.sasl_auth_plain("ritam","password")
      mc.bucket_select('default')

      keys = ["

      {0}

      -

      {1}

      ".format(prefix, i) for i in range(0, number_of_items)]
      print ("inserting {0} items".format(number_of_items))
      for k in keys:
      mc.set(k, 0, 0, str(uuid.uuid4())[0:16])

       

      Output from Test Code:

      Ritams-MBP:lib ritamsharma$ python testMemcached.py 

      Traceback (most recent call last):

        File "testMemcached.py", line 9, in <module>

          mc.sasl_auth_plain("ritam","password")

        File "/Users/ritamsharma/Documents/source/cbqe-3966/testrunner/lib/mc_bin_client.py", line 512, in sasl_auth_plain

          return self.sasl_auth_start('PLAIN', '\0'.join([foruser, user, password]))

        File "/Users/ritamsharma/Documents/source/cbqe-3966/testrunner/lib/mc_bin_client.py", line 508, in sasl_auth_start

          return self._doCmd(memcacheConstants.CMD_SASL_AUTH, mech, data)

        File "/Users/ritamsharma/Documents/source/cbqe-3966/testrunner/lib/mc_bin_client.py", line 139, in _doCmd

          return self._handleSingleResponse(opaque)

        File "/Users/ritamsharma/Documents/source/cbqe-3966/testrunner/lib/mc_bin_client.py", line 131, in _handleSingleResponse

          cmd, opaque, cas, keylen, extralen, data = self._handleKeyedResponse(myopaque)

        File "/Users/ritamsharma/Documents/source/cbqe-3966/testrunner/lib/mc_bin_client.py", line 127, in _handleKeyedResponse

          raise MemcachedError(errcode, rv)

      mc_bin_client.MemcachedError: Memcached error #32 'Auth error':  Auth failure for vbucket :0 to mc 10.142.150.101:11210

      Attachments

        Activity

          People

            trond Trond Norbye
            ritam.sharma Ritam Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty