MB-23429: CBAUTH_SOCKPATH was not set from ns_server

It turns out that setting the variable is something the
operator could set to _override_ the path to saslauth.

To work around this we now:

1) Try to look up CBAUTH_SOCKPATH
2) If not found, use default /var/run/saslauthd/mux
3) Allow ns_server to specify a path in memcached.json
   through the keyword: saslauthd_socketpath

Change-Id: Ia3b74f83bf812a5fb8b394ace66dd27faec49208
Reviewed-on: http://review.couchbase.org/75530
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>